Backport to angular 4. Make it compile. nvm use 11. npm run build. cd dist. npm publish

--- a/src/tsconfig.es5.json
+++ b/src/tsconfig.es5.json
@@ -21,8 +21,8 @@
     "annotateForClosureCompiler": true,
     "strictMetadataEmit": true,
     "skipTemplateCodegen": true,
-    "flatModuleOutFile": "ng2-image-viewer.js",
-    "flatModuleId": "ng2-image-viewer"
+    "flatModuleOutFile": "ng2-image-viewer-rit.js",
+    "flatModuleId": "ng2-image-viewer-rit"
   },
   "files": [
     "./index.ts"
