--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng2-image-viewer",
-  "version": "2.0.0",
+  "name": "ng2-image-viewer-rit",
+  "version": "3.1.5",
   "scripts": {
     "build": "gulp build",
     "build:watch": "gulp",
@@ -16,11 +16,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/brenoprata10/ng2-image-viewer"
+    "url": "https://github.com/reberinformatik/ng2-image-viewer"
   },
   "author": {
-    "name": "brenoprata10",
-    "email": "brenoprata10@gmail.com"
+    "name": "reberinformatik",
+    "email": "dev@reberinformatik.ch"
   },
   "keywords": [
     "angular",
@@ -39,12 +39,12 @@
     "url": "https://github.com/brenoprata10/ng2-image-viewer/issues"
   },
   "devDependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
     "@compodoc/compodoc": "^1.0.0-beta.10",
     "@types/jasmine": "2.5.53",
     "@types/node": "~6.0.60",
@@ -65,6 +65,8 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lite-server": "^2.3.0",
+    "minimatch": "^3.1.2",
+    "glob": "7.2.3",
     "node-sass": "^4.12.0",
     "node-sass-tilde-importer": "^1.0.0",
     "node-watch": "^0.5.2",
