--- a/src/package.json
+++ b/src/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ng2-image-viewer",
-  "version": "1.1.1",
+  "name": "ng2-image-viewer-rit",
+  "version": "3.1.5",
   "repository": {
     "type": "git",
-    "url": "https://github.com/brenoprata10/ng2-image-viewer"
+    "url": "https://github.com/reberinformatik/ng2-image-viewer"
   },
   "author": {
-    "name": "brenoprata10",
-    "email": "brenoprata10@gmail.com"
+    "name": "reberinformatik",
+    "email": "dev@reberinformatik.ch"
   },
   "keywords": [
     "angular",
@@ -19,14 +19,14 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/brenoprata10/ng2-image-viewer/issues"
+    "url": "https://github.com/reberinformatik/ng2-image-viewer/issues"
   },
-  "main": "ng2-image-viewer.umd.js",
-  "module": "ng2-image-viewer.js",
-  "jsnext:main": "ng2-image-viewer.js",
-  "typings": "ng2-image-viewer.d.ts",
+  "main": "ng2-image-viewer-rit.umd.js",
+  "module": "ng2-image-viewer-rit.js",
+  "jsnext:main": "ng2-image-viewer-rit.js",
+  "typings": "ng2-image-viewer-rit.d.ts",
   "peerDependencies": {
-    "@angular/core": "^7.0.0",
+    "@angular/core": "^4.0.0",
     "iv-viewer": "~2.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
